--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body><!--aleraçao de outra pessoa-->
+<body>
+    <!--aleraçao de outra pessoa-->
     <p>Olá, GIT!!</p>
     
 </body>
